<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/dialog_style"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:textColor="#333333"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_shipping_address"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="start"
        android:layout_marginBottom="2dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopStart="6dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:textSize="16dp"
            android:hint="@string/city"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="2dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusTopStart="6dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/street"
                android:textSize="16dp"
                android:hint="@string/street"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusTopStart="6dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/house"
                android:textSize="16dp"
                android:hint="@string/house"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/button_corners"
            android:text="@string/cancel"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/done"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/button_corners"
            android:text="@string/done"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>




</LinearLayout>